ajustes secao hero e header

--- a/index.html
+++ b/index.html
@@ -44,17 +44,11 @@
             </ul>
         </nav>
 
-        <!-- ATIVAR ESSA PARTE QUANDO FOR FAZER O LIGHT MODE
-
-        <span class="material-symbols-outlined" id="mode">
-            dark_mode
-        </span> -->
-        
     </header>
 
     <section class="childs" id="hero-section">
         <div id="hero-div-container">
-            <h1>Procurando desenvolvedor Fullstack?</h1>
+            <h1>Procurando Desenvolvedor Fullstack?</h1>
             
             <svg class="arrows">
                 <path class="a1" d="M0 0 L30 32 L60 0"></path>
