ajustado resumo sobre mim

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 
                 
                 <p class="profile-sinopse">
-                    Desenvolvedor web em transição de carreira, com sólida formação técnica e foco em soluções modernas e eficientes para a web. 
+                    Desenvolvedor web em transição de carreira, com formação técnica e foco em soluções modernas e eficientes para a web. 
                     Tenho experiência no desenvolvimento de aplicações full stack utilizando tecnologias como HTML, CSS, JavaScript, React, Node.js, Express, Git, MySQL, MariaDB e PostgreSQL. 
-                    Concluí um curso intensivo de desenvolvimento web com ênfase em JavaScript e estou cursando Análise e Desenvolvimento de Sistemas para aprofundar ainda mais meus conhecimentos. 
+                    Concluí cursos intensivos de desenvolvimento web com ênfase em JavaScript e estou cursando Análise e Desenvolvimento de Sistemas para aprofundar ainda mais meus conhecimentos. 
                     Valorizo boas práticas de programação, aprendizado contínuo e colaboração em equipe. 
                     Busco oportunidades para aplicar minhas habilidades em projetos reais e contribuir ativamente no desenvolvimento de produtos digitais de qualidade.
                 </p>
